--- a/compose.yaml
+++ b/compose.yaml
@@ -4,15 +4,28 @@ services:
   db:
     image: postgres:14
     container_name: intrapay_db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123!
-      POSTGRES_DB: intrapay
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+
+  api:
+    build:
+      context: .
+    container_name: intrapay_api
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env
+    working_dir: /app
+    command: ["/bin/intrapay"]
 
 volumes:
   pgdata:
